@@ -11,6 +11,8 @@ class Turba_Block_Minisearch extends Horde_Core_Block
 {
     /**
      * The available options for address book selection
+     *
+     * @var array
      */
     protected $_options = array();
 
@@ -49,15 +51,17 @@ class Turba_Block_Minisearch extends Horde_Core_Block
      */
     protected function _content()
     {
-        if (!$GLOBALS['browser']->hasFeature('iframes')) {
-            return '<em>' . _("A browser that supports iframes is required") . '</em>';
-        }
+        global $page_output, $registry;
 
-        $calendars = empty($this->_params['addressbooks'])
-            ? implode(';', array_keys($this->_options))
-            : implode(';', $this->_params['addressbooks']);
+        $abooks = empty($this->_params['addressbooks'])
+            ? array_keys($this->_options)
+            : $this->_params['addressbooks'];
 
-        $GLOBALS['page_output']->addScriptFile('minisearch.js');
+        $page_output->addInlineJsVars(array(
+            'TurbaMinisearch.abooks' => $abooks,
+            'TurbaMinisearch.URI_AJAX' => $registry->getServiceLink('ajax', 'turba')->url
+        ));
+        $page_output->addScriptFile('minisearch.js');
 
         Horde::startBuffer();
         include TURBA_TEMPLATES . '/block/minisearch.inc';
