@@ -2,6 +2,7 @@
 v4.0.0-git
 ----------
 
+[mms] Convert turba minisearch block to the Horde AJAX framework.
 [jan] Support 'emails' attribute in smartphone view (Bug #11544).
 [jan] Attach share owner to all address book titles (Bug #11528).
 [jan] Fix exporting from browse view (Bug #11526).
